--- a/styles.css
+++ b/styles.css
@@ -263,9 +263,13 @@ a:hover{
     height: auto;
     width: auto;
     padding: 2%;
+    border-radius: 10px;
 }
 
 .styelBtn:hover{
     background-color: lightblue;
     color: black;
+}
+option{
+    background-color: rgb(0, 79, 128);
 }
