styel en ticekt kopen veranderd

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body{
     background: url('dancefestivalBG.jpg') no-repeat  center center fixed;
     background-size: 100%, 100%;
     background-position: center;
+    background-color: lightblue;
 }
 .divBody{
     display: flex;
